# docs/swagger.json
@@ -8,6 +8,38 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/api/v1/activate-account/{activationpath}": {
+            "get": {
+                "description": "Route to Activate Account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Activate Account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Path de ativação",
+                        "name": "activationpath",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/users": {
             "post": {
                 "description": "Route to create a new user",
@@ -53,13 +85,10 @@
                 "birthday": {
                     "type": "integer"
                 },
-                "confirmPassword": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
-                "firstName": {
+                "first_name": {
                     "type": "string"
                 },
                 "gender": {
@@ -68,16 +97,10 @@
                 "id": {
                     "type": "integer"
                 },
-                "lastName": {
+                "last_name": {
                     "type": "string"
                 },
-                "mobileNumber": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "pathAccountActivation": {
+                "mobile_number": {
                     "type": "string"
                 }
             }
